Transaction JUnit Tests Added